--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="custom-padding">
         <h3 class="text-light p-5 "><u>Activities:</u></h3>
         <ul>
-        <li class="text-light fs-3"> Managed the Mulearn MIT LinkedIn page .Responsible for creating and scheduling content, engaging with followers, and tracking page performance.</li>
+        <li class="text-light fs-3"> Managed the Mulearn MITS LinkedIn page .Responsible for creating and scheduling content, engaging with followers, and tracking page performance.</li>
        </ul>
        </div>
       
