--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="https://www.linkedin.com/in/saurav-kurian-reji/" target="_blank">Linkedin</a>
+                <a class="nav-link text-light" href="https://www.linkedin.com/in/saurav-reji/" target="_blank">Linkedin</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="https://www.instagram.com/saurav.k_r/" target="_blank">Instagram</a>
